--- a/shopping-cart/public/index.html
+++ b/shopping-cart/public/index.html
@@ -27,7 +27,7 @@
     <link href="css/style.css" rel="stylesheet" />
     <link href="css/bootstrap.min.css" rel="stylesheet" />
 
-    <title>React App</title>
+    <title>Mini Project 2 - Shopping Cart</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
